week4-troubleshooting/W4D3/yaml/app-pod.yaml
# Working backend
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app: web
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
