week4-troubleshooting/W4D3/yaml/dns-test-pod.yaml
# Used for DNS testing.
apiVersion: v1
kind: Pod
metadata:
  name: dns-test
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command:
    - sleep
    - "3600"
