week4-troubleshooting/W4D3/yaml/wrong-port-pod.yaml
# Application listening on unexpected port.
apiVersion: v1
kind: Pod
metadata:
  name: wrong-port
  labels:
    app: wrong-port
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
