week4-troubleshooting/W4D3/yaml/wrong-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrong-port-svc
spec:
  selector:
    app: wrong-port
  ports:
  - port: 8080
    targetPort: 8080
