week4-troubleshooting/W4D3/yaml/networkpolicy-deny.yaml
# Block ingress to web pod.
# Result: Traffic cannot reach web pod.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-web
spec:
  podSelector:
    matchLabels:
      app: web

  policyTypes:
  - Ingress
